parser/sample_tests/ours/expressions.txt

*** Error line 4.
  return a + 2;
         ^
*** syntax error

